# sc_spartanburg_measles

./: 1_run_geopops.ipynb  2_explore_people.ipynb  3_explore_networks.ipynb  5_measles_quarantine.ipynb  README.md  measles_geopops.py  measles_parameters.xlsx  pyproject.toml
data/: config.json  config_parameters.xlsx  folders_files_tree.rtf
data/geo/: tl_2019_45_bg.dbf  tl_2019_45_bg.shp.iso.xml  tl_2019_45_bg.shx
data/pop_export/: adj_dummy_keys.csv  adj_out_workers.csv  adj_upper_triang_gq.mtx  cbg_idxs.csv  company_workers.csv  gq_residents.csv  gq_workers.csv  gqs.csv  hh.csv  outside_workers.csv  sch_students.csv  sch_workers.csv
data/pop_export/starsim/: net_g.csv
data/processed/: acs_targets.csv
marimo/: 2_explore_people.py  3_explore_networks.py  4_measles_seeding.py  5_measles_quarantine.py
